syntax = "proto3";

package carefree.door.namespace;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "carefree/api/door/v1/namespace;namespace_proto";

service NamespaceService {
  rpc CreateNamespace(CreateNamespaceRequest) returns (Namespace);
  rpc DeleteNamespace(DeleteNamespaceRequest) returns (google.protobuf.Empty);
  rpc GetNamespace(GetNamespaceRequest) returns (Namespace);
  rpc UpdateNamespace(UpdateNamespaceRequest) returns (Namespace);
}

// 命名空间的结构
message Namespace {
  // 资源名称
  // namespaces/<id>
  string name = 1;

  // 命名空间名称
  string display_name = 2;

  // 命名空间描述
  string description = 3;

  // door 计数
  int32 door_count = 4;

  // 创建时间
  google.protobuf.Timestamp create_time = 5;

  // 更新时间
  google.protobuf.Timestamp update_time = 6;
}

message CreateNamespaceRequest {
  // 命名空间 ID
  //
  // 指定一个 ID，如果不指定则随机生成。
  string id = 1;
  Namespace namespace = 2;
}

message DeleteNamespaceRequest {
  // 资源名称
  // namespaces/<id>
  string name = 1;
}

message GetNamespaceRequest {
  // 资源名称
  // namespaces/<id>
  string name = 1;
}

message UpdateNamespaceRequest {
  Namespace namespace = 1;
}
