syntax = "proto3";

package carefree.project.account.type;

import "google/protobuf/timestamp.proto";
import "api/project/account/admin/user/v1/user_admin.proto";

option go_package = "github.com/carefree/api/ecnova/account/type;type_proto";

// 认证凭证
message Credential {
  // 资源名称
  // credentials/<credential_id>
  string name = 1;

  oneof payload {
    // 基础认证
    admin.user.v1.BasicAuthCredential basic_auth = 2;
  }

  // 访问时间
  google.protobuf.Timestamp access_time = 4;

  // 失效时间
  google.protobuf.Timestamp expire_time = 5;

  // 创建时间
  google.protobuf.Timestamp create_time = 6;

  // 更新时间
  google.protobuf.Timestamp update_time = 7;
}
