syntax = "proto3";

package carefree.project.account.v1;

import "api/project/type/accesstoken/accesstoken.proto";

option go_package = "github.com/carefree/api/project/account/v1;account_proto";

service Account {
  // 使用用户名密码登录认证，可以使用经过认证的邮件地址、手机号等进行登录
  rpc BasicAuth(BasicAuthRequest) returns (type.Token);
}

// 基本认证请求
message BasicAuthRequest {
  oneof login {
    // 用户名
    //
    // 使用用户名登录。
    string username = 1;

    // 邮箱
    //
    // 使用邮箱登录。
    string email = 2;

    // 手机号
    //
    // 使用手机号登录。
    string phone_number = 3;
  }

  // 密码
  string password = 4;

  // 命名空间
  string namespace = 5;
}
